# WonderPeaks_preprocessing

./: LICENSE  MANIFEST.in  README.md  STAR_alignment.py  pyproject.toml  requirements.txt  setup.py
Notebooks/: NGS_processing.ipynb
