[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WonderPeaks_preprocessing"
version = "0.1.0"
requires-python = ">=3.8"

authors = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"},
]

maintainers = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"}
]

description = "preprocessing functions for ChIP-seq and RNA-seq in Fungi with WonderPeaks"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["ChIP-seq", "RNA-seq", "NGS", "WonderPeaks", "peak calling", "UTR", "dynamic UTR", "Fungi", "Yeast"]

classifiers = [
  "Development Status :: Beta",
  "Programming Language :: Python"
]


[project.urls]
Repository = "https://github.com/mgarber21/WonderPeaks_preprocessing.git"
"Bug Tracker" = "https://github.com/mgarber21/WonderPeaks_preprocessing/issues"


