[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WonderPeaks_preprocessing"
version = "0.2.4" # Match the version in pyproject.toml 
requires-python = ">=3.6"

dependencies = [
    "deepTools==3.5.1",
    "deeptoolsintervals==0.1.9",
    "multiqc==1.10.1",]
authors = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"},
]

maintainers = [
  {name = "Megan E. Garber", email = "mgarber21@gmail.com"}
]

description = "preprocessing functions for ChIP-seq and RNA-seq in Fungi with WonderPeaks"
readme = "README.md"
license = "MIT"
keywords = ["ChIP-seq", "RNA-seq", "NGS", "WonderPeaks", "peak calling", "UTR", "dynamic UTR", "Fungi", "Yeast"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8"
]

[project.urls]
Repository = "https://github.com/mgarber21/WonderPeaks_preprocessing.git"
"Bug Tracker" = "https://github.com/mgarber21/WonderPeaks_preprocessing/issues"

